# sensor-analyzer

./: LICENSE  README.md  pyproject.toml
data/: sample_sensors.csv
sensor_analyzer/: analyzer.py  cli.py
